--- a/.env
+++ b/.env
@@ -1,3 +1,26 @@
+SITE_NAME_HEADER=my
+SITE_MAIN_LANGUAGE=ru
+SITE_BASE_URL=
+SHOW_CREATED_TIMESTAMP=true
+TIMESTAMP_FORMAT= yyyy.mm.dd h:mm 
+SHOW_UPDATED_TIMESTAMP=false
+NOTE_ICON_DEFAULT=
+NOTE_ICON_TITLE=false
+NOTE_ICON_FILETREE=false
+NOTE_ICON_INTERNAL_LINKS=false
+NOTE_ICON_BACK_LINKS=false
+STYLE_SETTINGS_CSS=body.css-settings-manager { --057f-af99-before: '📽️📽️'; --3841-6c07-color: #FF9D9D; --677a-0f88-color: #00FF09; --677a-0f88-before: '🟨'; --3841-6c07-before: '❗'; --2482-c133-color: #FFFFFF; --2482-c133-before: '📥'; --32d8-a3ec-before: '🚶'; --3489-6244-before: '📽️📺'; --32d8-a3ec-color: #EA7FFF; --7f4d-7b74-after: '✓✓✓'; --e2b6-2850-after: ; } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
+STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-windows is-frameless is-hidden-frameless obsidian-app styled-scrollbars show-inline-title show-ribbon show-view-header is-maximized css-settings-manager obsidian-themepocalypse AT-column oz-show-all-num is-focused
+USE_FULL_RESOLUTION_IMAGES=false
 THEME=https://raw.githubusercontent.com/seanwcom/Red-Graphite-for-Obsidian/HEAD/theme.css
 BASE_THEME=dark
 dgHomeLink=true
+dgPassFrontmatter=false
+dgShowBacklinks=true
+dgShowLocalGraph=true
+dgShowInlineTitle=true
+dgShowFileTree=true
+dgEnableSearch=true
+dgShowToc=true
+dgLinkPreview=true
+dgShowTags=false
