--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SITE_NAME_HEADER=my
 SITE_MAIN_LANGUAGE=ru
-SITE_BASE_URL=
+SITE_BASE_URL=https://db-by-ole.netlify.app/
 SHOW_CREATED_TIMESTAMP=true
 TIMESTAMP_FORMAT= yyyy.mm.dd h:mm 
 SHOW_UPDATED_TIMESTAMP=false
